package p12_state;

public interface State {
    String handle(StateManager stateManager);
}
